# langfuse-samples

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  LANGFUSE_SCORING.md  MCP_SETUP.md  Makefile  README.md  UPGRADE-v3.md  debug_scores_api.py  debug_scores_detailed.py  delete_metrics.py  delete_traces.py  pyproject.toml  requirements-dev.txt  setup.py
langfuse-aws/: .env.example  .mcp.json  CLAUDE.md  COST_TRACKING.md  README.md  app.py  cdk.context.json.template  cleanup.py  cost-filter-examples.json  cost-filter.json  cost-monitor.py  deploy-cdk.py  prepare-cdk.py
langfuse-aws/cdk_stacks/: aurora_postgresql.py  ecs_task_clickhouse.py  ecs_task_langfuse_web.py  ecs_task_langfuse_worker.py
ollama-langfuse/: .env.example  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_SCORING.md  SCORING.md  debug_traces.py  ollama_langfuse_example.py  ollama_langfuse_example_with_session.py  ollama_monty_python_demo.py  ollama_scoring_demo.py  ollama_scoring_demo_advanced.py  ollama_scoring_example.py  requirements.txt  run_and_validate.py  run_and_validate_improved.py  run_scoring_and_validate.py  setup.py  view_scoring_results.py  view_traces.py
strands-langfuse/: .env.example  CLAUDE.md  COMPARE.md  KEY_STRANDS_LANGFUSE.md  README.md  cloud.env.example  implementation_plan.md  lambda_handler.py  main.py  organize.md  requirements.txt  run_and_validate.py  run_scoring_and_validate.py  setup.py  strands_langfuse_demo.py  strands_monty_python_demo.py  strands_scoring_demo.py  view_traces.py
utils/: README.md  delete_metrics.py  validate_code.py
(+36 files in other folders)
